# drone_main

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_all.sh  build_mingw.ps1  copilot.txt  done.txt  firmware_uploader.py  hardware_todo.txt  note.txt  reports.txt  setup_environment.bat
Hardware- test1/: _autosave-test1.kicad_prl  main_bom.csv  test1.kicad_prl  test1.kicad_pro  test1.kicad_sch  test1.kicad_sch-bak  ~_autosave-test1.kicad_pcb.lck
PCB-MAIN/216700-0609/: part_info.txt
PCB-MAIN/216700-0609/3D/: 216700-0609.stp
PCB-MAIN/216700-0609/Allegro/: 2167000609.dra  2167000609.psm  r104_26.pad  r32_5_18.pad  r75_26.pad
PCB-MAIN/216700-0609/Altair/: 216700-0609.upfx
PCB-MAIN/216700-0609/Altium/: 216700-0609.SchLib  216700-0609.epw  2167000609.PcbLib
PCB-MAIN/216700-0609/CADSTAR/: 216700-0609.csa  2167000609.cpa
PCB-MAIN/216700-0609/CR-5000/: 216700-0609.laf  2167000609.ftf  2167000609.pkf
PCB-MAIN/216700-0609/CR-8000/: 216700-0609.cdf
PCB-MAIN/216700-0609/Capture/: 216700-0609.xml
PCB-MAIN/216700-0609/DesignSpark PCB/: 216700-0609.dsl
PCB-MAIN/216700-0609/DipTrace/: 216700-0609.asc
PCB-MAIN/216700-0609/EAGLE/: 216700-0609.lbr
PCB-MAIN/216700-0609/KiCad/: 216700-0609.dcm  216700-0609.kicad_sym  2167000609.kicad_mod  V-DFN1515-6.kicad_mod
PCB-MAIN/216701-0609/: 216701-0609.epw  part_info.txt
PCB-MAIN/ICP-10111/: part_info.txt
PCB-MAIN/IS25LP040E-JYLE-TR/: IS25LP040E-JYLE-TR.epw  part_info.txt
PCB-MAIN/LTE3401LX/: LTE3401LX.epw  part_info.txt
PCB-MAIN/MM8030-2610RK0/: MM8030-2610RK0.epw  part_info.txt
PCB-MAIN/Main/: Main.kicad_pcb  Main.kicad_prl  Main.kicad_pro  Main.kicad_sch  Main.kicad_sch-bak  fp-info-cache  fp-lib-table  sym-lib-table  ~Main.kicad_pcb.lck
PCB-MAIN/NCV7344AD10R2G/: NCV7344AD10R2G.epw  part_info.txt
PCB-MAIN/NX3DV221TKX/: NX3DV221TKX.epw  part_info.txt
PCB-MAIN/QFN_EXT/: AMPHENOL_GSB1C4621DS2HR.kicad_mod  test1-B_Cu.gbr  test1-B_Mask.gbr  test1-B_Paste.gbr  test1-B_Silkscreen.gbr  test1-Edge_Cuts.gbr  test1-F_Cu.gbr  test1-F_Fab.gbr  test1-F_Mask.gbr  test1-F_Paste.gbr  test1-F_Silkscreen.gbr  test1-In1_Cu.gbr  test1-In2_Cu.gbr  test1-NPTH.drl  test1-PTH.drl  test1-job.gbrjob
PCB-MAIN/SC0914_13_/: part_info.txt
PCB-MAIN/STM32WL33KBV6/: part_info.txt
base_station/: README.md  build_peripherals.ps1  run_sim.ps1
base_station/examples/: README.md
base_station/ui/: main.py
build-fprime-automatic-native/: CMakeCache.txt  build.ninja  cmake_install.cmake
deprecated/: BUILD-SYSTEM-README.md  CMakeLists.txt  DEPS.md  LICENSE  QUICK-SETUP-GUIDE.md  build_lpc4330.bat  install_requirements.bat  program_lpc4330.bat
deprecated/Hardware- test1/: _autosave-test1.kicad_pro  test1.kicad_pcb
deprecated/deprectaed/: IMPLEMENTATION-GUIDE.md  build_all.bat  build_host.bat  settings.ini
deprecated/deprectaed/firmware/: CMakeLists.txt
deprecated/deprectaed/firmware/App/: CMakeLists.txt
deprecated/deprectaed/firmware/Config/: config.c  config.h
deprecated/deprectaed/firmware/Core/: rtos_hooks.c  system_lpc43xx.c
deprecated/deprectaed/firmware/Drivers/: ext_module_uart.h  imu_driver.h  imu_kx122.c  imu_lsm303c_support.c  imu_lsm6ds3.c  imu_lsm6ds3.h  lvds.c  lvds.h  rf_s2lpqtr.c  spi_bus.c  usb_bridge.h
deprecated/deprectaed/firmware/M0/: selftest_m0.h
deprecated/deprectaed/firmware/Middleware/: bus_monitor.h  command_processor.c  command_processor.h  core_monitor.h  error_handling.h  kalman.h  pid.c  ram_monitor.h  rf_error_report.c  telemetry.c  telemetry.h
deprecated/deprectaed/firmware/Tests/: README_VM.md  host_peripherals.h  hw_sim.c  test_selftest.c
deprecated/deprectaed/firmware/Utils/: cli.c  logging.c
deprecated/deprectaed/firmware/examples/: hamming_example.c  imu_lsm303c_config_example.c  imu_lsm303c_example.c  imu_realtime_config_example.c  rf_hamming_example.c  rf_monitor_example.c  s2lpqtr_rf_example.c
deprecated/esp32_loader/: Makefile  dual_linker.ld  esp32_main.c  flask_server.py
deprecated/extracted_assets/: firmware-CMakeLists.txt  interrupts.c
deprecated/firmware/: improvements.md
deprecated/firmware/Core/: CMakeLists.txt  interrupts.c
deprecated/old/: comms.c  imu_backup.c  imu_fast.c  imu_fusion.c  imu_mag.c
extracted_assets/: ENHANCED-IMPLEMENTATION-GUIDE.md  FILE-LIST-SUMMARY.md  SAFETY-IMPLEMENTATION-GUIDE.md  config.c  config.h  flight_controller.c  flight_controller.h  gps_uart.c  gps_uart.h  init.c  safety_system.c  safety_system.h  spi_interface.c  spi_interface.h  startup.c  syscalls.c  system_lpc43xx.c  watchdog_m0.c  watchdog_m0.h
firmware/: CMakeLists.txt  README.md  improvements.md
firmware/Algorithm/: kalman.c  kalman.h
firmware/App/: CMakeLists.txt  init.c  init.h  main.c
firmware/Config/: CMakeLists.txt  config.h  pin_config.h  third_party_setup.txt
firmware/Core/: CMakeLists.txt  dualcore.c  startup.c  syscalls.c
firmware/Drivers/: CMakeLists.txt  ext_module_uart.c  ext_module_uart.h  ext_uart.c  ext_uart.h  flash.c  flash.h  gps_uart.c  gps_uart.h  i2c_bus.h  imu_driver.c  imu_kx122.h  imu_lsm303c.c  imu_lsm303c.h  imu_lsm6ds3.h  motor_control.h  rf_s2lpqtr.h  spi_bus.c  spi_bus.h
firmware/M0/: watchdog_m0.c  watchdog_m0.h
firmware/Middleware/: CMakeLists.txt  attitude_estimator.c  bus_monitor.c  bus_monitor.h  core_monitor.c  core_monitor.h  hamming.c  imu_monitor.c  kalman.c  kalman.h  pid.h  rf_error_report.h  safety_monitor.h  safety_system.h  selftest.c  spi_interface.h
firmware/Tests/: host_peripherals.c  host_peripherals_fixed.c  host_sensor_models.h  hw_sim.c  hw_sim.h  test_harness_arm.c
firmware/Utils/: cli.h  logging.h
firmware/examples/: README.md  bus_monitor_example.c  ext_module_uart_example.c  gps_uart_example.c  imu_monitor_example.c  kalman9dof_example.c  lsm303c_example.c  lsm6ds3_example.c  pid_example.c
flight_software/: BUILD_AND_FLASH_GUIDE.md
flight_software/GDS/: OpenMCT_Setup.md  attitude_telemetry.xml  baro_telemetry.xml  dashboard.json  gds.ini  gps_telemetry.xml  imu_telemetry.xml  nav_commands.xml  pid_commands.xml  pyro_commands.xml
flight_software/quadcopter_example/: Quadcopter.xml
(+505 files in other folders)
